[WSP-61] Upgrading to 16.2.0