@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.onehippo.cms7</groupId>
         <artifactId>hippo-cms7-enterprise-release</artifactId>
-        <version>15.7.1</version>
+        <version>16.2.0</version>
         <!-- Please have a look at the property section while upgrading. -->
     </parent>
 
@@ -82,7 +82,7 @@
         -->
         <bloomreach.version>${hippo.release.version}</bloomreach.version>
         <bloomreach.essential.dashboard>${hippo.release.version}</bloomreach.essential.dashboard>
-        <h2.database.version>2.1.214</h2.database.version>
+        <h2.database.version>2.2.224</h2.database.version>
         <development-module-deploy-dir>shared/lib</development-module-deploy-dir>
         <local-module-deploy-dir>shared/lib</local-module-deploy-dir>
 
@@ -136,12 +136,13 @@
         <hippo.environment></hippo.environment>
         <!--<tomcatDistributionUrl>https://archive.apache.org/dist/tomcat/tomcat-8/v8.0.48/bin/apache-tomcat-8.0.48.tar.gz</tomcatDistributionUrl>-->
 
-        <forge.folderctxmenus.version>6.0.0</forge.folderctxmenus.version>
-        <bloomreach.forge.ipfilter.version>4.0.0</bloomreach.forge.ipfilter.version>
-        <bloomreach.forge.feed.version>7.0.0</bloomreach.forge.feed.version>
-        <bloomreach.text-search-replace.version>3.0.1</bloomreach.text-search-replace.version>
-        <forge.resetpassword.version>6.0.0</forge.resetpassword.version>
-        <bloomreach.forge.sitemapv2.version>3.0.0</bloomreach.forge.sitemapv2.version>
+        <forge.folderctxmenus.version>7.0.0</forge.folderctxmenus.version>
+        <bloomreach.forge.ipfilter.version>5.0.0</bloomreach.forge.ipfilter.version>
+        <bloomreach.forge.feed.version>8.0.0</bloomreach.forge.feed.version>
+        <bloomreach.text-search-replace.version>4.0.0</bloomreach.text-search-replace.version>
+        <forge.resetpassword.version>7.0.0</forge.resetpassword.version>
+        <bloomreach.forge.sitemapv2.version>4.0.0</bloomreach.forge.sitemapv2.version>
+        <content-exim.version>6.0.1</content-exim.version>
 
         <commonmark.version>0.18.2</commonmark.version>
         <hystrix-javanica.version>1.5.18</hystrix-javanica.version>
@@ -151,71 +152,68 @@
         due to insufficient support for on-disk caching in v2.x. -->
         <ehcache3.version>3.9.9</ehcache3.version>
 
-        <annotation-api.version>1.3.2</annotation-api.version>
-        <aspectweaver.version>1.9.9.1</aspectweaver.version>
-        <awaitility.version>4.2.0</awaitility.version>
+        <aspectweaver.version>1.9.22.1</aspectweaver.version>
+        <awaitility.version>4.2.1</awaitility.version>
         <aws-java-sdk.version>1.12.218</aws-java-sdk.version>
         <aws.sdk-bom.version>2.16.1</aws.sdk-bom.version>
         <batik.version>1.14</batik.version>
-        <commons-codec.version>1.15</commons-codec.version>
+        <commons-codec.version>1.16.1</commons-codec.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
-        <commons-io.version>2.11.0</commons-io.version>
+        <commons-io.version>2.16.1</commons-io.version>
         <commons-pool.version>1.6</commons-pool.version>
-        <commons.version>3.12.0</commons.version>
-        <content-exim.version>4.0.1</content-exim.version>
+        <commons.version>3.14.0</commons.version>
         <cucumber.version>7.21.1</cucumber.version>
         <directory-maven.version>1.0</directory-maven.version>
         <easymock.version>4.3</easymock.version>
         <findbugs.version>3.0.2</findbugs.version>
-        <gmavenplus.version>1.13.1</gmavenplus.version>
+        <gmavenplus.version>3.0.2</gmavenplus.version>
         <googleauth.version>1.5.0</googleauth.version>
-        <groovy.version>3.0.9</groovy.version>
-        <gson.version>2.9.0</gson.version>
+        <groovy.version>3.0.21</groovy.version>
+        <gson.version>2.11.0</gson.version>
         <hamcrest.version>2.2</hamcrest.version>
         <hamcrest.version>2.2</hamcrest.version>
         <handlebars.version>4.3.0</handlebars.version>
         <hippo.forge.breadcrumb.version>3.0.0</hippo.forge.breadcrumb.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <httpcore.version>4.4.15</httpcore.version>
-        <jackson-coreutils.version>2.15.2</jackson-coreutils.version>
-        <jackson-dataformat-xml.version>2.17.1</jackson-dataformat-xml.version>
+        <httpclient.version>4.5.14</httpclient.version>
+        <httpcore.version>4.4.16</httpcore.version>
+        <jackson-coreutils.version>2.0</jackson-coreutils.version>
+        <jackson-dataformat-xml.version>2.18.2</jackson-dataformat-xml.version>
         <jcr-mock.version>1.6.0</jcr-mock.version>
         <jedis.verison>4.3.1</jedis.verison>
         <joda-time.version>2.12.7</joda-time.version>
         <json-simple.verison>1.1.1</json-simple.verison>
-        <jsp-api.version>2.2</jsp-api.version>
         <jsonwebtoken-version>0.11.5</jsonwebtoken-version>
         <junit-dataprovider.version>1.13.1</junit-dataprovider.version>
         <junit.version>4.13.2</junit.version>
-        <kotlin.version>1.4.10</kotlin.version>
+        <kotlin.version>1.8.21</kotlin.version>
         <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
-        <log4j.version>2.17.2</log4j.version>
+        <log4j.version>2.23.1</log4j.version>
         <logback.version>1.2.11</logback.version>
         <maven-chckstyle.version>3.1.1</maven-chckstyle.version>
-        <maven-enforcer.version>3.3.0</maven-enforcer.version>
+        <maven-enforcer.version>3.4.1</maven-enforcer.version>
         <maven-failsafe.version>3.5.2</maven-failsafe.version>
         <maven-frontend.version>1.15.1</maven-frontend.version>
         <maven-jacoco.version>0.8.12</maven-jacoco.version>
         <maven-jxr.version>3.2.0</maven-jxr.version>
         <maven-pmd.version>3.16.0</maven-pmd.version>
-        <maven-resources.version>3.2.0</maven-resources.version>
+        <maven-resources.version>3.3.1</maven-resources.version>
         <maven-surefire.version>3.5.2</maven-surefire.version>
         <microsoft-playwright.version>1.50.0</microsoft-playwright.version>
         <mokito.version>3.12.4</mokito.version>
         <objenesis.version>3.2</objenesis.version>
-        <okio.version>2.7.0</okio.version>
-        <okhttp.version>4.9.3</okhttp.version>
+        <okio.version>3.6.0</okio.version>
+        <okhttp.version>4.12.0</okhttp.version>
+        <pitest-maven.version>1.16.0</pitest-maven.version>
         <plexus-component.version>2.1.0</plexus-component.version>
-        <plexus-utils.version>3.4.1</plexus-utils.version>
+        <plexus-utils.version>3.5.1</plexus-utils.version>
         <powermock.version>2.0.9</powermock.version>
         <selenium.version>4.29.0</selenium.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <snakeyaml.version>1.33</snakeyaml.version>
+        <snakeyaml.version>2.2</snakeyaml.version>
         <swagger-codegen.version>1.0.32</swagger-codegen.version>
         <swagger-core.version>1.6.6</swagger-core.version>
         <system-rules.version>1.19.0</system-rules.version>
-        <taglibs-standard.version>1.2.5</taglibs-standard.version>
         <versions-maven.version>2.10.0</versions-maven.version>
         <webdriverextensions-maven.version>3.4.0</webdriverextensions-maven.version>
         <wiremock.version>2.35.0</wiremock.version>
@@ -225,8 +223,8 @@
 
     <repositories>
         <repository>
-            <id>hippo</id>
-            <name>Hippo maven 2 repository.</name>
+            <id>bloomreach-maven2</id>
+            <name>Bloomreach Maven 2</name>
             <url>https://maven.bloomreach.com/repository/maven2/</url>
             <snapshots>
                 <enabled>false</enabled>
@@ -242,8 +240,8 @@
                 <updatePolicy>never</updatePolicy>
                 <checksumPolicy>fail</checksumPolicy>
             </releases>
-            <id>hippo-maven2-enterprise</id>
-            <name>Hippo Enterprise Maven 2</name>
+            <id>bloomreach-maven2-enterprise</id>
+            <name>Bloomreach Enterprise Maven 2</name>
             <url>https://maven.bloomreach.com/repository/maven2-enterprise/</url>
         </repository>
         <repository>
@@ -306,13 +304,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.sun.mail</groupId>
-                <artifactId>jakarta.mail</artifactId>
-                <version>${jakarta.mail-api.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.database.version}</version>
@@ -332,24 +323,24 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.servlet.jsp</groupId>
-                <artifactId>jsp-api</artifactId>
+                <groupId>jakarta.servlet.jsp</groupId>
+                <artifactId>jakarta.servlet.jsp-api</artifactId>
                 <version>${jsp-api.version}</version>
                 <scope>provided</scope>
             </dependency>
 
             <!-- other predefined runtime scope versioned dependencies -->
             <dependency>
-                <groupId>org.apache.taglibs</groupId>
-                <artifactId>taglibs-standard-spec</artifactId>
-                <version>${taglibs-standard.version}</version>
+                <groupId>com.bloomreach.xm</groupId>
+                <artifactId>taglibs-standard-spec-jakarta</artifactId>
+                <version>${taglibs.version}</version>
                 <scope>runtime</scope>
             </dependency>
 
             <dependency>
-                <groupId>org.apache.taglibs</groupId>
-                <artifactId>taglibs-standard-impl</artifactId>
-                <version>${taglibs-standard.version}</version>
+                <groupId>com.bloomreach.xm</groupId>
+                <artifactId>taglibs-standard-impl-jakarta</artifactId>
+                <version>${taglibs.version}</version>
                 <scope>runtime</scope>
             </dependency>
 
@@ -492,7 +483,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.fge</groupId>
+                <groupId>com.github.java-json-tools</groupId>
                 <artifactId>jackson-coreutils</artifactId>
                 <version>${jackson-coreutils.version}</version>
             </dependency>
@@ -537,7 +528,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson2-databind.version}</version>
+                <version>${jackson2.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -602,9 +593,9 @@
                 <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>${annotation-api.version}</version>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
@@ -659,7 +650,7 @@
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
-                <version>${org.json.version}</version>
+                <version>${json.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-pool</groupId>
@@ -918,12 +909,12 @@
                     <rules>
                         <reactorModuleConvergence/>
                         <requireJavaVersion>
-                            <!-- Any Java 8 version is allowed -->
-                            <version>[11,)</version>
+                            <!-- Any Java 17 version is allowed -->
+                            <version>[17,)</version>
                         </requireJavaVersion>
                         <requireMavenVersion>
                             <!-- Any Maven 3 version is allowed -->
-                            <version>[3.0,4.0)</version>
+                            <version>[3.9,4.0)</version>
                         </requireMavenVersion>
                     </rules>
                 </configuration>
@@ -988,7 +979,7 @@
                     <groupId>org.pitest</groupId>
                     <artifactId>pitest-maven</artifactId>
                     <scope>provided</scope>
-                    <version>1.16.0</version>
+                    <version>${pitest-maven.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.xml.bind</groupId>
@@ -1001,14 +992,10 @@
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
+                    <groupId>jakarta.annotation</groupId>
+                    <artifactId>jakarta.annotation-api</artifactId>
+                    <version>${jakarta.annotation-api.version}</version>
                     <scope>compile</scope>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.activation</groupId>
-                    <artifactId>jakarta.activation-api</artifactId>
-                    <scope>runtime</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.glassfish.jaxb</groupId>
@@ -1021,7 +1008,7 @@
                     <plugin>
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-maven</artifactId>
-                        <version>1.16.0</version>
+                        <version>${pitest-maven.version}</version>
                         <configuration>
                             <targetClasses>
                                 <param>com.uk.nhs.digital.mutate.*</param>
@@ -1037,7 +1024,7 @@
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <artifactId>cargo-maven3-plugin</artifactId>
                         <configuration>
                             <configuration>
                                 <configfiles>
@@ -1089,6 +1076,8 @@
                                         -Xmx1024m
                                         -Duser.timezone=Europe/London
                                         -Dfile.encoding=UTF-8
+                                        <!-- for freemarker -->
+                                        --add-opens=java.base/java.util=ALL-UNNAMED
                                     </cargo.jvmargs>
                                     <cargo.start.jvmargs>
                                         -Xdebug
@@ -1227,7 +1216,7 @@
                 <plugins>
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <artifactId>cargo-maven3-archetypes</artifactId>
                         <configuration>
                             <container>
                                 <systemProperties>
@@ -1291,16 +1280,6 @@
                 <dependency>
                     <groupId>jakarta.xml.ws</groupId>
                     <artifactId>jakarta.xml.ws-api</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.activation</groupId>
-                    <artifactId>jakarta.activation-api</artifactId>
                     <scope>provided</scope>
                 </dependency>
                 <dependency>
@@ -1369,16 +1348,6 @@
                 <dependency>
                     <groupId>jakarta.xml.ws</groupId>
                     <artifactId>jakarta.xml.ws-api</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.activation</groupId>
-                    <artifactId>jakarta.activation-api</artifactId>
                     <scope>provided</scope>
                 </dependency>
                 <dependency>
